@@ -17,6 +17,12 @@ Version 2.1 (in development)
 
 * clean, linkify: accept only unicode or utf-8-encoded str (#176)
 
+* ``bleach.clean()`` no longer unescapes entities including ones that are missing
+  a ``;`` at the end which can happen in urls and other places. (#143)
+
+* ``bleach.clean()`` is no longer idempotent. If you run ``bleach.clean()`` on
+  text multiple times, it'll escape things again and again.
+
 **Features**
 
 **Bug fixes**
@@ -35,7 +41,6 @@ Version 2.1 (in development)
 
 * add test website and scripts to test ``bleach.clean()`` output in browser;
   thank you, Greg Guthe!
-
 
 Version 2.0 (March 8th, 2017)
 -----------------------------
